[tool.poetry]
name = "alphabet2kana"
version = "0.1.4"
description = "Convert English alphabet to Katakana"
repository = "https://github.com/shihono/alphabet2kana"
readme = "README.md"
authors = ["shihono <26952997+shihono@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
