[tool.poetry]
name = "alphabet2kana"
version = "0.1.5"
description = "Convert English alphabet to Katakana"
repository = "https://github.com/shihono/alphabet2kana"
readme = "README.md"
authors = ["shihono <26952997+shihono@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"
black = "^21.9b0"
isort = "^5.9.3"

[tool.poetry.scripts]
a2k = 'alphabet2kana.main:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["alphabet2kana"]
