[tool.poetry]
name = "alphabet2kana"
version = "0.1.7"
description = "Convert English alphabet to Katakana"
repository = "https://github.com/shihono/alphabet2kana"
readme = "README.md"
authors = ["shihono <26952997+shihono@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"
black = "^24.3.0"
isort = "^5.11.5"

[tool.poetry.scripts]
a2k = 'alphabet2kana.main:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["alphabet2kana"]
